<?xml version="1.0"?>
<package format="2">
  <name>dfrobot_robots</name>
  <version>0.0.0</version>
  <description>contains urdf for dfrobot robots</description>

  <maintainer email="paxx13@github.com">paxx13</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  

</package>
